--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
             transform-style: preserve-3d;
             box-sizing: border-box;
-            transform-origin: center center; /* Ensure consistent rotation origin */
+            transform-origin: center; /* Ensure consistent rotation origin */
         }
 
         /* Do an horizontal flip when the card is clicked */
