--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Flip Animation</title>
     <style>
+        /* CSS Reset */
         * {
             margin: 0;
             padding: 0;
@@ -21,48 +22,19 @@
             perspective: 1000px;
             margin: 50px auto;
             cursor: pointer;
+            /* Transition for all transform properties, including custom ones */
             transition: transform 0.3s ease, animation 0.5s ease;
             background-color: #9b59b6;
             border-radius: 10px;
             box-sizing: border-box;
+            /* Apply gyroscope rotation as default transform */
             transform: rotateX(var(--gyroRotateX, 0deg)) rotateY(var(--gyroRotateY, 0deg));
-            position: relative;
-            overflow: hidden;
-        }
-
-        .card::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
-                120deg,
-                rgba(255, 255, 255, 0) 0%,
-                rgba(255, 255, 255, 0.35) 50%,
-                rgba(255, 255, 255, 0) 100%
-            );
-            transform: translateX(calc(var(--gyroRotateY, 0deg) * 2));
-            animation: shimmer 3s infinite;
-            pointer-events: none;
-        }
-
-        @keyframes shimmer {
-            0% {
-                left: -100%;
-            }
-            50% {
-                left: 100%;
-            }
-            100% {
-                left: 100%;
-            }
         }
 
         .card:hover {
+            /* Combine hover scale with current gyroscope rotation */
             transform: scale(1.03) rotateX(var(--gyroRotateX, 0deg)) rotateY(var(--gyroRotateY, 0deg));
-            animation: bounce 0.5s ease;
+            animation: bounce 0.5s ease; /* Bounce animation on hover */
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
         }
 
@@ -72,21 +44,25 @@
             100% { transform: scale(1.03); }
         }
 
+        /* This container holds the front and back of the card */
         .card-inner {
             position: relative;
             width: 100%;
             height: 100%;
+            /* Updated transition for a snappier effect with anticipation*/
             transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
             transform-style: preserve-3d;
             box-sizing: border-box;
-            transform-origin: center center;
+            transform-origin: center center; /* Ensure consistent rotation origin */
         }
 
+        /* Do an horizontal flip when the card is clicked */
         .card.flipped .card-inner {
             transform: rotateY(180deg);
-            box-shadow: none;
+            box-shadow: none; /* Remove shadow during flip */
         }
 
+        /* Style the front and back of the card */
         .card-face {
             position: absolute;
             width: 100%;
@@ -101,6 +77,7 @@
             box-sizing: border-box;
             border: 0;
             animation: border-glow 8s linear infinite;
+            box-sizing: border-box;
         }
 
         @keyframes border-glow {
@@ -128,6 +105,7 @@
             }
         }
 
+        /* Style the front face - green */
         .card-front {
             background-image: url(https://static.wixstatic.com/media/9ba0fd_91d1432a0afe415f8e5171d3ce748c28~mv2.png);
             background-size: cover;
@@ -137,14 +115,14 @@
             color: white;
         }
 
+        /* Style the back face - blue */
         .card-back {
-            background-image: url(https://static.wixstatic.com/media/9ba0fd_4d3c5d55d9af4cb1ac4e7e1ec7a7d402~mv2.png);
+            background-image: url(https://static.wixstatic.com/media/9ba0fd_4d3c5d55d9af4cb1ac4e7e1ec7a7d402~mv2.png); /* Updated image URL */
             background-size: cover;
             background-position: center;
             color: white;
             transform: rotateY(180deg);
         }
-
         .card-title{
           font-size: 16px;
           padding: 10px;
@@ -156,6 +134,7 @@
     <div class="card" id="myCard">
         <div class="card-inner">
             <div class="card-face card-front">
+                
                 <p></p>
             </div>
             <div class="card-face card-back">
@@ -169,14 +148,18 @@
         let hoverTimeout;
         let bounceInterval;
 
+        // Gyroscope effect
         if (window.DeviceOrientationEvent) {
             window.addEventListener('deviceorientation', function(event) {
                 let rotateX = 0;
                 let rotateY = 0;
 
+                // Beta is the front-to-back tilt, Gamma is the left-to-right tilt
+                // Map beta (-180 to 180) and gamma (-90 to 90) to a smaller range for card rotation
+                // Adjust sensitivity as needed
                 if (event.beta !== null && event.gamma !== null) {
-                    rotateX = (event.beta / 90) * 15;
-                    rotateY = (event.gamma / 90) * 15;
+                    rotateX = (event.beta / 90) * 30; // Max 15 degrees tilt
+                    rotateY = (event.gamma / 90) * 30; // Max 15 degrees tilt
                 }
 
                 card.style.setProperty('--gyroRotateX', rotateX + 'deg');
@@ -184,6 +167,16 @@
             });
         } else {
             console.warn('DeviceOrientationEvent not supported on this device/browser.');
+            // Note: For iOS 13+, you might need to request permission explicitly:
+            // if (typeof DeviceOrientationEvent.requestPermission === 'function') {
+            //     DeviceOrientationEvent.requestPermission()
+            //         .then(permissionState => {
+            //             if (permissionState === 'granted') {
+            //                 window.addEventListener('deviceorientation', handleOrientation);
+            //             }
+            //         })
+            //         .catch(console.error);
+            // }
         }
 
         card.addEventListener('mouseenter', function() {
@@ -195,12 +188,14 @@
                     card.style.animation = 'bounce 0.5s ease infinite';
                 }, 2000);
             }, 1000);
+            // The initial scale on hover is now handled by CSS :hover
         });
 
         card.addEventListener('mouseleave', function() {
             clearTimeout(hoverTimeout);
             clearInterval(bounceInterval);
-            card.style.animation = '';
+            card.style.animation = ''; // Stop the bounce animation
+            // The scale reset is handled by CSS when :hover is no longer active
         });
 
         card.addEventListener('click', function() {
